--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="browse">Browse Projects</a></li>
+      <li><a routerLink="admin">Start a New Project</a></li>
     </ul>
   </div>
 </nav>
