--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,9 +1,15 @@
-<h2>Browse Projects</h2>
+<h2>Projects</h2>
 
-<div *ngFor="let project of projects | async" (click)="goToProjectPage(project)" class="panel panel-default">
+<div *ngFor="let project of projects | async" class="panel panel-default">
   <div class="panel-body">
-    <h3 class="text-center">{{project.name}}</h3>
+    <h3  (click)="goToProjectPage(project)" class="text-center">{{project.name}}</h3>
     <hr>
-    <p class="text-center">{{project.description}}</p>
+    <p class="text-center">Current: {{project.currentAmount}} / Goal: {{project.targetAmount}}</p>
+    <hr>
+    <div *ngIf="currentRoute === '/admin'">
+      <p class="text-center">{{project.description}}</p>
+      <hr>
+      <app-edit-project [selectedProject]="project"></app-edit-project>
+    </div>
   </div>
 </div>
