--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -2,8 +2,8 @@
   <h3>{{(projectToDisplay | async)?.name}}</h3>
   <h4>{{(projectToDisplay | async)?.managers}}</h4>
   <p>{{(projectToDisplay | async)?.description}}</p>
-  <p>{{(projectToDisplay | async)?.targetAmount}}</p>
-  <p>{{(projectToDisplay | async)?.currentAmount}}</p>
+  <p>Goal: {{(projectToDisplay | async)?.targetAmount}}</p>
+  <p>Amount Currently Raised: {{(projectToDisplay | async)?.currentAmount}}</p>
   <p>{{(projectToDisplay | async)?.intent}}</p>
-  <p>{{(projectToDisplay | async)?.swag}}</p>
+  <p>Swag for donating: {{(projectToDisplay | async)?.swag}}</p>
 </div>
