--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -37,3 +37,5 @@
 </div>
 
 <button class="btn btn-default" (click)="beginUpdatingProject(selectedProject)">Update</button>
+
+<button class="btn btn-default" (click)="beginDeletingProject(selectedProject)">Delete</button>
