--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,23 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" routerLink="">{{title}}</a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a routerLink="about">About</a></li>
-      <li><a routerLink="browse">Browse Projects</a></li>
-      <li><a routerLink="admin">Start a New Project</a></li>
-    </ul>
-  </div>
-</nav>
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" id="jumbo-header">
   <h1>{{title}}</h1>
 </div>
 
 <div class="container">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" routerLink="">{{title}}</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="about">About</a></li>
+        <li><a routerLink="browse">Browse Projects</a></li>
+        <li><a routerLink="admin">Start a New Project</a></li>
+      </ul>
+    </div>
+  </nav>
   <router-outlet></router-outlet>
 </div>
-
 <footer class="footer">
   <div class="container">
     <a class="text-muted" routerLink="admin">Admin</a>
