--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="well">
   <h3>{{(projectToDisplay | async)?.name}}</h3>
   <h4>{{(projectToDisplay | async)?.managers}}</h4>
   <p>{{(projectToDisplay | async)?.description}}</p>
