--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,15 +12,14 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a routerLink="about">About</a></li>
           <li><a routerLink="browse">Browse Projects</a></li>
-          <li><a routerLink="admin">Start a New Project</a></li>
+          <li><a routerLink="new">Start a New Project</a></li>
         </ul>
       </div>
     </nav>
+    <div class="background"></div>
     <router-outlet></router-outlet>
   </div>
   <footer class="footer">
-    <div class="container">
-      <a class="text-muted" routerLink="admin">Admin</a>
-    </div>
+    <a routerLink="admin">Admin</a>
   </footer>
 </div>
