--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,18 @@
   padding: 10px 30px;
 }
 
+#right-overflow {
+  /*background-color: rgba(255,167,160,.45);*/
+  background-image: url('../assets/hearts.png');
+  background-size: cover;
+  height: 100%;
+  min-height: 100vh;
+  width: 60vw;
+  position: absolute;
+  left: 95%;
+  top: 0;
+}
+
 #jumbo-header {
   width: 20%;
   height: 100vh;
@@ -88,5 +100,11 @@
   .navbar {
     margin-top: 0;
     margin-bottom: 0;
+  }
+}
+
+@media (max-width: 1300px) {
+  #right-overflow {
+    display: none;
   }
 }
