--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   </div>
 
   <div class="container">
+    <div id="right-overflow"></div>
+    <div class="background"></div>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -16,7 +18,6 @@
         </ul>
       </div>
     </nav>
-    <div class="background"></div>
     <router-outlet></router-outlet>
   </div>
   <footer class="footer">
