--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -92,7 +92,7 @@
   #jumbo-header h1 {
     transform: none;
   }
-  .container {
+  .container:not(#ultimate-container) {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
@@ -100,6 +100,11 @@
   .navbar {
     margin-top: 0;
     margin-bottom: 0;
+  }
+  .footer {
+
+    bottom: 85%;
+    left: 90%;
   }
 }
 
