add margin to navbar in mediaq

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -99,7 +99,10 @@
   }
   .navbar {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
+  }
+  .navbar-default .navbar-brand {
+    display: none;
   }
   .footer {
     position: absolute;
